able to host online

--- a/Demo/templates/DemoInternet.html
+++ b/Demo/templates/DemoInternet.html
@@ -314,7 +314,7 @@
         function changeResult(resultArray) {
           // ./ImgResult/empty.png
           baseID = "Result-";
-          baseURL = "../ImgResult/";
+          baseURL = "/images/";
 
           for (let i = 0; i < 4; i++) {
             var image = document.getElementById(baseID + i);
