--- a/Demo/templates/DemoInternet.html
+++ b/Demo/templates/DemoInternet.html
@@ -148,7 +148,7 @@
       </div>
       <div class="right-box">
         <div class="image-box-1">
-          <img id="Result-0" src="../ImgResult/empty.png" alt="Image" >
+          <img id="Result-0" src="/images/empty.png" alt="Image" >
             <div class="overlay-1" id="Prob-0">Prob = 50%</div>
           </img>
         </div>
@@ -156,17 +156,17 @@
         
         <div class="secondary-col" width="200">
           <div class="image-box-2">
-            <img id="Result-1" src="../ImgResult/empty.png" alt="Image" >
+            <img id="Result-1" src="/images/empty.png" alt="Image" >
               <div class="overlay-2" id="Prob-1">Prob = 50%</div>
             </img>
           </div>
           <div class="image-box-2">
-            <img id="Result-2" src="../ImgResult/empty.png" alt="Image" >
+            <img id="Result-2" src="/images/empty.png" alt="Image" >
               <div class="overlay-2" id="Prob-2">Prob = 50%</div>
             </img>
           </div>
           <div class="image-box-2">
-            <img id="Result-3" src="../ImgResult/empty.png" alt="Image" >
+            <img id="Result-3" src="/images/empty.png" alt="Image" >
               <div class="overlay-2" id="Prob-3">Prob = 50%</div>
             </img>
           </div>
