--- a/Demo/templates/DemoInternet.html
+++ b/Demo/templates/DemoInternet.html
@@ -253,7 +253,8 @@
 
     <script>
       // change IP address
-      const IP_address = "http://73.116.174.195:80"
+      // const IP_address = "http://73.116.174.195:80"
+      const IP_address = "http://73.116.174.195:100"
 
       window.onload = function () {
         const canvas = document.getElementById("draw-board");
